# KG_LightRAG

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: sample.txt
src/graphrag/: __init__.py  build.py  config.py  core.py  providers.py  query.py  visualize.py
