[project]
name = "graphrag-002"
version = "0.1.0"
description = "Minimal LightRAG-based GraphRAG: build, visualize, and query knowledge graphs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "google-genai>=2.8.0",
    "lightrag-hku>=1.5.3",
    "networkx>=3.6.1",
    "ollama>=0.6.2",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag"]
